<?xml version="1.0"?>
<package format="3">
  <name>eskf_iwo</name>
  <version>2.8.2</version>
  <description>The eskf_iwo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sachin@luxonis.com">sachin</maintainer>
  <author>jinxu wang</author>

  <license>MIT</license>


  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <depend condition="$ROS_VERSION == 1">message_filters</depend>
  
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>ros_environment</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>

  <depend>catkin</depend>
  <depend>roscpp</depend>

  <depend condition="$ROS_VERSION == 1">nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
